[package]
name = "claude-vault"
version = "0.1.0"
edition = "2021"
description = "Claude Code conversation archive tool with SQLite + FTS5"
license = "MIT"
repository = "https://github.com/kuroko1t/claude-vault"
homepage = "https://github.com/kuroko1t/claude-vault"
keywords = ["claude-code", "sqlite", "fts5", "archive", "cli"]
categories = ["command-line-utilities", "database"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"

[dev-dependencies]
tempfile = "3"
